# iTransate-Spanglish

./: .gitignore
PART 1/itranslate-demo/: .env.example  .gitignore  README.md
PART 1/itranslate-demo/device-simulator/: pyproject.toml  requirements.txt
PART 1/itranslate-demo/device-simulator/src/: config.py  main.py
PART 1/itranslate-demo/device-simulator/src/audio/: buffer.py  capture.py
PART 1/itranslate-demo/device-simulator/src/prompts/: modes.py
PART 1/itranslate-demo/device-simulator/src/streaming/: client.py  errors.py  reconnect.py
PART 1/itranslate-demo/device-simulator/src/transcription/: handler.py
PART 1/itranslate-demo/device-simulator/transcripts/: session.txt
PART 1/itranslate-demo/token-service/: package-lock.json  package.json
PART 1/itranslate-demo/token-service/src/: config.ts  index.ts
PART 1/itranslate-demo/token-service/src/middleware/: auth.ts
PART 1/itranslate-demo/token-service/src/routes/: token.ts
PART 2/Spanglish/: Spanglish.java
