[project]
name = "itranslate-device-simulator"
version = "1.0.0"
description = "Device simulator for iTranslate speech-to-text demo"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
]

[project.scripts]
itranslate-demo = "src.main:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
